# verso

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: changelog-2026-02-21.md
docs/plans/: 2026-02-21-ui-redesign.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/ai/: AiEditModal.tsx  AiResponseToast.tsx
src/components/command-palette/: CommandPalette.tsx
src/components/editor/: Editor.tsx  Frontmatter.ts  HighlightMark.ts  LinkEditor.tsx  MarkdownSource.tsx  SearchToolbar.tsx  SlashCommand.tsx  SlashCommandList.tsx  TableControls.ts
src/components/icons/: index.tsx
src/components/illustrations/: index.tsx
src/components/layout/: Footer.tsx  Sidebar.tsx  WelcomePage.tsx
src/components/notes/: NoteList.tsx
src/components/settings/: AboutSettingsSection.tsx  EditorSettingsSection.tsx  SettingsPage.tsx  ShortcutsSettingsSection.tsx
src/components/ui/: AlertDialog.tsx  Button.tsx  Input.tsx  Select.tsx  Toaster.tsx  Tooltip.tsx  index.tsx
src/context/: NotesContext.tsx  ThemeContext.tsx
src/i18n/: context.tsx  en.ts  index.ts  zh-CN.ts
src/lib/: plainText.ts  platform.ts  utils.ts
src/services/: ai.ts  notes.ts  pdf.ts
src/types/: note.ts
website/: index.html
website/zh/: index.html
