[package]
name = "Verso"
version = "0.7.0"
description = "An offline markdown-based notes app"
authors = ["zhoulianglen"]
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "verso_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = "6"
tantivy = "0.22"
tokio = { version = "1", features = ["fs", "sync"] }
base64 = "0.22"
url = "2"
urlencoding = "2"
open = "5"
regex = "1"
walkdir = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-os = "2"
chrono = "0.4"
